--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
+    "react-minimal-pie-chart": "^8.4.0",
     "tailwindcss": "^3.3.0"
   }
 }
