--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
+    "react-loading-icons": "^1.1.0",
     "react-minimal-pie-chart": "^8.4.0",
-    "tailwindcss": "^3.3.0",
-    "react-loading-icons": "^1.1.0"
+    "tailwindcss": "^3.3.0"
   }
 }
