--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.365.0",
     "mongodb": "^6.5.0",
-    "next": "14.1.4",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
