--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
     "react-icons": "^5.0.1",
     "react-select": "^5.8.0",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@ai-sdk/openai": "^0.0.9",
+    "ai": "^3.1.1",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "react-loading-icons": "^1.1.0",
     "react-minimal-pie-chart": "^8.4.0",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "zod": "^3.23.6"
   }
 }
